welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (30<a && a<40) {
  ^